--- a/src/frameworks/miui/core/res/res/values/alias.xml
+++ b/src/frameworks/miui/core/res/res/values/alias.xml
@@ -45,6 +45,7 @@
     <item type="dimen" name="android_preference_fragment_padding_bottom">@*android:dimen/preference_fragment_padding_bottom</item>
     <item type="dimen" name="android_preference_item_padding_inner">@*android:dimen/preference_item_padding_inner</item>
     <item type="dimen" name="android_preference_widget_width">@*android:dimen/preference_widget_width</item>
+    <item type="dimen" name="android_volume_panel_top">@*android:dimen/volume_panel_top</item>
 
     <item type="drawable" name="android_ic_aggregated">@*android:drawable/ic_aggregated</item>
     <item type="drawable" name="android_silent_mode_indicator">@*android:drawable/silent_mode_indicator</item>
@@ -107,6 +108,7 @@
     <item type="drawable" name="android_create_contact">@*android:drawable/create_contact</item>
     <item type="drawable" name="android_ic_sysbar_quicksettings">@*android:drawable/ic_sysbar_quicksettings</item>
     <item type="drawable" name="android_dialog_full_holo_light">@*android:drawable/dialog_full_holo_light</item>
+    <item type="drawable" name="android_menu_hardkey_panel_holo_light">@*android:drawable/menu_hardkey_panel_holo_light</item>
 
     <item type="id" name="android_alertTitle">@*android:id/alertTitle</item>
     <item type="id" name="android_action_bar_container">@*android:id/action_bar_container</item>
@@ -179,6 +181,8 @@
     <item type="array" name="android_config_virtualKeyVibePattern">@*android:array/config_virtualKeyVibePattern</item>
     <item type="array" name="android_config_mobile_hotspot_provision_app">@*android:array/config_mobile_hotspot_provision_app</item>
     <item type="array" name="android_common_nicknames">@*android:array/common_nicknames</item>
+    <item type="array" name="android_config_longPressVibePattern">@*android:array/config_longPressVibePattern</item>
+    <item type="array" name="android_config_keyboardTapVibePattern">@*android:array/config_keyboardTapVibePattern</item>
 
     <item type="layout" name="android_status_bar_latest_event_content">@*android:layout/status_bar_latest_event_content</item>
     <item type="layout" name="android_transient_notification">@*android:layout/transient_notification</item>
@@ -186,6 +190,7 @@
     <item type="layout" name="android_usb_storage_activity">@*android:layout/usb_storage_activity</item>
     <item type="layout" name="android_preference_header_item">@*android:layout/preference_header_item</item>
     <item type="layout" name="android_preference_list_fragment">@*android:layout/preference_list_fragment</item>
+    <item type="layout" name="android_list_menu_item_layout">@*android:layout/list_menu_item_layout</item>
 
     <item type="xml" name="android_apns">@*android:xml/apns</item>
 </resources>
