--- a/src/frameworks/miui/core/res/res/values/attrs.xml
+++ b/src/frameworks/miui/core/res/res/values/attrs.xml
@@ -28,6 +28,7 @@
     <declare-styleable name="MiuiInCallAnswerWidgetHorizontal">
         <!-- Reference to an array resource with light that be shown as targets around a circle.-->
         <attr name="targetDrawablesLight" format="reference"/>
+        <attr name="rightHintAnimationDrawable" format="reference"/>
     </declare-styleable>
 
     <!-- =============================== -->
