--- a/src/frameworks/miui/core/res/res/values/public.xml
+++ b/src/frameworks/miui/core/res/res/values/public.xml
@@ -49,6 +49,9 @@
   <public type="attr" name="buttonMask" id="0x0301000d"/>
   <public type="attr" name="buttonBar" id="0x0301000e"/>
 
+  <!--  for the answer hint animation of horizontal incall screen widget -->
+  <public type="attr" name ="rightHintAnimationDrawable" id="0x0301000f"/>
+
   <public type="drawable" name="alphabet_indexer_bg" id="0x03020000" />
   <public type="drawable" name="alphabet_indexer_bg_normal" id="0x03020001" />
   <public type="drawable" name="alphabet_indexer_bg_pressed" id="0x03020002" />
@@ -417,6 +420,7 @@
   <public type="drawable" name="android_create_contact" id="0x0302016d" />
   <public type="drawable" name="android_ic_sysbar_quicksettings" id="0x0302016e" />
   <public type="drawable" name="android_dialog_full_holo_light" id="0x0302016f" />
+  <public type="drawable" name="android_menu_hardkey_panel_holo_light" id="0x03020170" />
 
   <public type="layout" name="contact_header" id="0x03030000" />
   <public type="layout" name="flag" id="0x03030001" />
@@ -460,6 +464,9 @@
   <public type="layout" name="android_preference_header_item" id="0x03030027" />
   <public type="layout" name="volume_adjust" id="0x03030028" />
   <public type="layout" name="volume_adjust_item" id="0x03030029" />
+  <public type="layout" name="resource_operation_view" id="0x0303002a" />
+  <public type="layout" name="resource_action_bar_custom_view" id="0x0303002b" />
+  <public type="layout" name="android_list_menu_item_layout" id="0x0303002c" />
 
   <public type="anim" name="alert_dialog_enter" id="0x03040000" />
   <public type="anim" name="alert_dialog_exit" id="0x03040001" />
@@ -487,6 +494,8 @@
   <public type="array" name="android_config_mobile_hotspot_provision_app" id="0x03060005" />
   <public type="array" name="android_common_nicknames" id="0x03060006" />
   <public type="array" name="mobile_operator_numeric_equivalencies" id="0x03060007" />
+  <public type="array" name="android_config_longPressVibePattern" id="0x03060008" />
+  <public type="array" name="android_config_keyboardTapVibePattern" id="0x03060009" />
 
   <public type="color" name="secondary_tab_text_color" id="0x03070000" />
   <public type="color" name="secondary_tab_text_pressed_color" id="0x03070001" />
@@ -572,6 +581,7 @@
   <public type="dimen" name="android_preference_fragment_padding_bottom" id="0x030a001b" />
   <public type="dimen" name="android_preference_item_padding_inner" id="0x030a001c" />
   <public type="dimen" name="android_preference_widget_width" id="0x030a001d" />
+  <public type="dimen" name="android_volume_panel_top" id="0x030a001e" />
 
   <public type="id" name="delete_button" id="0x030b0000" />
   <public type="id" name="paste_list" id="0x030b0001" />
@@ -1059,6 +1069,7 @@
   <public type="style" name="Theme.Panel.Volume" id="0x030d0025" />
   <public type="style" name="Animation.VolumePanel" id="0x030d0026" />
   <public type="style" name="SlidingButtonStyle" id="0x030d0027" />
+  <public type="style" name="Resource.Custom.View.ActionBar" id="0x030d0028" />
 
   <public type="menu" name="multi_select_dropdown_menu" id="0x030e0000" />
   <public type="menu" name="multi_select_menu" id="0x030e0001" />
