--- a/src/frameworks/miui/core/res/res/values/styles.xml
+++ b/src/frameworks/miui/core/res/res/values/styles.xml
@@ -72,6 +72,11 @@
         <item name="android:shadowDy">@miui:integer/button_text_shadow_dy</item>
     </style>
 
+    <style name="Resource.Custom.View.ActionBar" parent="@style/Theme.Light">
+        <item name="android:displayOptions">showHome|showCustom</item>
+        <item name="android:customNavigationLayout">@layout/resource_action_bar_custom_view</item>
+    </style>
+
     <style name="Widget.Button.Bar">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
