--- a/src/frameworks/miui/core/res/res/layout/resource_detail.xml
+++ b/src/frameworks/miui/core/res/res/layout/resource_detail.xml
@@ -10,33 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:paddingRight="10dip"
-            android:background="@drawable/resource_detail_title_bg">
-            <TextView
-                android:id="@+id/titlecontent"
-                android:layout_height="wrap_content"
-                android:layout_width="0dip"
-                android:layout_weight="1"
-                android:singleLine="true"
-                android:textColor="#000000"
-                android:textAppearance="@android:style/TextAppearance.WindowTitle"
-                android:paddingLeft="20dip"
-                android:text="@string/resource_title" />
-            <ImageView
-                android:id="@+id/titleprevious"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/preview_previous" />
-            <ImageView
-                android:id="@+id/titlenext"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/preview_next" />
-        </LinearLayout>
         <ScrollView
             android:id="@+id/scrollview"
             android:layout_width="match_parent"
@@ -58,46 +31,7 @@
                         android:layout_height="400dip"
                         android:focusableInTouchMode="true" />
                 </FrameLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="5dip"
-                    android:orientation="horizontal"
-                    android:gravity="center_vertical"
-                    android:background="@drawable/bottom_button_bar">
-                    <LinearLayout
-                        android:layout_width="0dip"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="vertical">
-                        <TextView
-                            android:id="@+id/componenttitle"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:gravity="left|center_vertical"
-                            android:text="@string/resource_detail"
-                            android:textColor="#848B92"
-                            android:textSize="16dip"
-                            android:paddingLeft="10dip"
-                            android:paddingRight="10dip" />
-                    </LinearLayout>
-                    <Button
-                        android:id="@+id/downloadbutton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="20dip"
-                        android:paddingRight="20dip" />
-                    <ImageButton
-                        android:id="@+id/deletebutton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="10dip"
-                        android:paddingRight="10dip"
-                        android:layout_marginLeft="10dip"
-                        android:background="@drawable/btn_bottom_last"
-                        android:src="@drawable/delete_icon"
-                        android:visibility="gone" />
-                </LinearLayout>
+                <include layout="@layout/resource_operation_view" />
                 <GridView
                     android:id="@+id/componentGrid"
                     android:layout_width="match_parent"
