--- a/src/packages/apps/Email/res/values/attrs.xml
+++ b/src/packages/apps/Email/res/values/attrs.xml
@@ -20,5 +20,6 @@
     <declare-styleable name="SizeBoundingFrameLayout_attributes">
         <attr name="maxWidth" format="dimension"/>
         <attr name="maxHeight" format="dimension"/>
+        <attr name="ringtonePreferenceStyle" format="reference" />
     </declare-styleable>
 </resources>
