--- a/src/packages/apps/ThemeManager/res/layout/preference_wallpaper.xml
+++ b/src/packages/apps/ThemeManager/res/layout/preference_wallpaper.xml
@@ -37,7 +37,7 @@
             android:fadingEdge="horizontal" />
 
         <ImageView
-            android:src="@drawable/arrow_right"
+            android:src="@miui:drawable/arrow_right"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"/>
