--- a/src/packages/apps/MiuiBrowser/res/layout/bookmark_group_view.xml
+++ b/src/packages/apps/MiuiBrowser/res/layout/bookmark_group_view.xml
@@ -19,7 +19,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:background="@drawable/group_view_bg">
+    android:background="@miui:drawable/list_fold_background">
 
     <TextView style="@style/GroupNameTextView"
         android:id="@+id/group_name" />
