--- a/src/packages/apps/MiuiBrowser/res/layout/history.xml
+++ b/src/packages/apps/MiuiBrowser/res/layout/history.xml
@@ -22,7 +22,9 @@
         android:id="@+id/history"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:groupIndicator="@null" />
+        android:groupIndicator="@null"
+        android:divider="@android:color/transparent"
+        android:listSelector="@android:color/transparent"/>
 
     <TextView android:id="@android:id/empty"
         android:layout_width="wrap_content"
