--- a/src/packages/apps/MiuiBrowser/res/layout/history_header.xml
+++ b/src/packages/apps/MiuiBrowser/res/layout/history_header.xml
@@ -16,5 +16,5 @@
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         style="@style/GroupNameTextView"
-        android:background="@drawable/group_view_bg"
+        android:background="@miui:drawable/list_fold_background"
         />
