--- a/src/packages/apps/MiuiBrowser/res/layout/history_item.xml
+++ b/src/packages/apps/MiuiBrowser/res/layout/history_item.xml
@@ -20,8 +20,7 @@
         android:orientation="vertical"
         android:paddingLeft="12dip"
         android:paddingRight="8dip"
-        android:background="@drawable/child_view_bg">
-
+        android:background="@miui:drawable/list_medium_middle_item_background">
 <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -75,8 +74,4 @@
             android:layout_gravity="center_vertical"
             />
 </LinearLayout>
-<ImageView android:id="@+id/divider"
-    android:layout_width="match_parent"
-    android:layout_height="1px"
-    src="@drawable/child_divider" />
 </LinearLayout>
