--- a/src/packages/apps/Mms/res/values/styles.xml
+++ b/src/packages/apps/Mms/res/values/styles.xml
@@ -32,8 +32,8 @@
         <item name="android:buttonStyle">@style/Widget.Holo.Light.Button</item>
     </style>
 
-    <style name="ActionBarStyle" parent="@android:style/Widget.Holo.Light.ActionBar.Solid">
-        <item name="android:displayOptions" />
+    <style name="ActionBarStyle" parent="@miui:style/Widget.Holo.Light.ActionBar.Solid.HomeUp">
+        <item name="android:displayOptions">homeAsUp|useLogo</item>
     </style>
 
     <style name="ActionBarStyle.NoActionBar">
