--- a/src/frameworks/miui/core/res/res/layout/list_item_multiple.xml
+++ b/src/frameworks/miui/core/res/res/layout/list_item_multiple.xml
@@ -63,7 +63,6 @@
             android:id="@+id/arrow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="center"
-            android:src="@drawable/arrow_right" />
+            android:scaleType="center" />
     </LinearLayout>
 </FrameLayout>
