--- a/src/frameworks/miui/overlay/frameworks/base/core/res/res/values/styles.xml
+++ b/src/frameworks/miui/overlay/frameworks/base/core/res/res/values/styles.xml
@@ -51,9 +51,11 @@
         <item name="android:clickColor">@android:color/holo_orange_light</item>
     </style>
     <style name="Widget.Holo.ActionBar.TabBar" parent="Widget.ActionBar.TabBar">
-        <item name="android:divider">?android:attr/actionBarDivider</item>
+        <item name="android:divider">@android:drawable/ab_tab_divider</item>
         <item name="android:showDividers">middle</item>
         <item name="android:dividerPadding">0dip</item>
+        <item name="android:paddingLeft">14dip</item>
+        <item name="android:paddingRight">14dip</item>
     </style>
      <!-- Dialog styles -->
 
