--- a/src/frameworks/miui/core/res/res/layout/flag.xml
+++ b/src/frameworks/miui/core/res/res/layout/flag.xml
@@ -9,6 +9,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="top|right" />
     <ImageView
+        android:id="@+id/center_flag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|right"
+        android:padding="10dip" />
+    <ImageView
         android:id="@+id/bottom_flag"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
