--- a/src/frameworks/miui/core/res/res/values/arrarys.xml
+++ b/src/frameworks/miui/core/res/res/values/arrarys.xml
@@ -6,6 +6,8 @@
         <item>"46001"</item>
         <item>"46002"</item>
         <item>"46003"</item>
+        <item>"46005"</item>
+        <item>"46006"</item>
         <item>"46007"</item>
         <item>"46009"</item>
     </string-array>
@@ -15,6 +17,8 @@
         <item>"China Unicom"</item>
         <item>"China Mobile"</item>
         <item>"China Telecom"</item>
+        <item>"China Telecom"</item>
+        <item>"China Unicom"</item>
         <item>"China Mobile"</item>
         <item>"China Telecom"</item>
     </string-array>
@@ -24,6 +28,8 @@
         <item>"46001"</item>
         <item>"46000"</item>
         <item>"46003"</item>
+        <item>"46003"</item>
+        <item>"46001"</item>
         <item>"46000"</item>
         <item>"46003"</item>
     </string-array>
