--- a/src/packages/apps/FileExplorer/res/values/styles.xml
+++ b/src/packages/apps/FileExplorer/res/values/styles.xml
@@ -81,13 +81,13 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textSize">19px</item>
-        <item name="android:textColor">#111111</item>
+        <item name="android:textColor">@miui:color/primary_text</item>
     </style>
     <style name="CategoryButtonCountTextStyle">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:textSize">15px</item>
-        <item name="android:textColor">#A6A6A6</item>
+        <item name="android:textColor">@miui:color/secondary_text</item>
         <item name="android:text">@string/category_default_number_text</item>
     </style>
 
@@ -118,7 +118,7 @@
     <style name="InformationTextStyle">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:textColor">#222222</item>
+        <item name="android:textColor">@miui:color/primary_text</item>
         <item name="android:textSize">12dip</item>
         <item name="android:drawablePadding">5dip</item>
     </style>
@@ -128,7 +128,7 @@
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">left</item>
         <item name="android:drawablePadding">5px</item>
-        <item name="android:textColor">#222222</item>
+        <item name="android:textColor">@miui:color/primary_text</item>
         <item name="android:textSize">10dip</item>
         <item name="android:layout_marginLeft">2dip</item>
     </style>
