--- a/src/packages/apps/MiuiHome/res/values-xhdpi/dimens.xml
+++ b/src/packages/apps/MiuiHome/res/values-xhdpi/dimens.xml
@@ -8,5 +8,5 @@
 
     <dimen name="icon_title_padding_bottom">0dip</dimen>
 
-    <dimen name="workspace_icon_text">13sp</dimen>
+    <dimen name="workspace_icon_text_size">13sp</dimen>
 </resources>
