MIUI西班牙 translations added.

--- a/src/packages/apps/MiuiSettings/res/values/arrays.xml
+++ b/src/packages/apps/MiuiSettings/res/values/arrays.xml
@@ -2,9 +2,9 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- Sound settings. The haptic feedback strength -->
     <string-array name="haptic_feedback_level_entries">
-        <item>Weak</item>
-        <item>Medium</item>
-        <item>Strong</item>
+        <item>Suave</item>
+        <item>Media</item>
+        <item>Fuerte</item>
     </string-array>
 
     <!-- Do not translate. -->
@@ -19,9 +19,9 @@
 
     <!-- Display settings.  The style of battery status showed in status bar. These are shown in a list dialog. -->
     <string-array name="battery_indicator_style_entries">
-        <item>Graphical</item>
-        <item>Percentage</item>
-        <item>Top-Bar</item>
+        <item>Gráfico</item>
+        <item>Porcentaje</item>
+        <item>Barra superior</item>
     </string-array>
 
     <string-array name="battery_indicator_style_values" translatable="false">
@@ -31,9 +31,9 @@
     </string-array>
 
     <string-array name="usb_connection_mode_entries">
-        <item>Ask on connection</item>
-        <item>Charge only</item>
-        <item>Mount SD card</item>
+        <item>Preguntar al conectar</item>
+        <item>Sólo cargar</item>
+        <item>Modo USB</item>
     </string-array>
 
     <string-array name="usb_connection_mode_values" translatable="false">
@@ -78,12 +78,12 @@
 
     <!-- Display settings. Available colors for breathing LED -->
     <string-array name="led_color_entries">
-        <item>Blue</item>
-        <item>Red</item>
-        <item>Green</item>
-        <item>Pink</item>
-        <item>Violet</item>
-        <item>Purple</item>
+        <item>Azul</item>
+        <item>Rojo</item>
+        <item>Verde</item>
+        <item>Rosa</item>
+        <item>Violeta</item>
+        <item>Púrpura</item>
     </string-array>
 
     <!-- Match this with the constants in AccessPoint. --> <skip />
