--- a/src/packages/apps/Contacts/res/layout/contact_detail_list_item.xml
+++ b/src/packages/apps/Contacts/res/layout/contact_detail_list_item.xml
@@ -111,6 +111,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:paddingLeft="@dimen/detail_item_icon_margin"
+            android:paddingRight="@dimen/detail_item_icon_margin"
             android:focusable="true"
             android:background="?android:attr/selectableItemBackground"
             android:nextFocusLeft="@id/actions_view_container">
