MIUI西班牙 translations added.

--- a/src/packages/apps/Notes/res/values/arrays.xml
+++ b/src/packages/apps/Notes/res/values/arrays.xml
@@ -9,7 +9,7 @@
     </string-array>
 
     <string-array name="menu_share_ways">
-        <item>Messaging</item>
+        <item>Mensajes</item>
         <item>Email</item>
     </string-array>
 </resources>
