--- a/src/packages/apps/SpareParts/res/values/arrays.xml
+++ b/src/packages/apps/SpareParts/res/values/arrays.xml
@@ -17,11 +17,11 @@
 
 <resources>
     <string-array name="entries_animations">
-        <item>Off</item>
-        <item>Fast</item>
+        <item>Apagado</item>
+        <item>Rápido</item>
         <item>Normal</item>
-        <item>Slow</item>
-        <item>Very Slow</item>
+        <item>Despacio</item>
+        <item>Lentísimo</item>
     </string-array>
 
     <string-array name="entryvalues_animations">
@@ -33,13 +33,13 @@
     </string-array>
     
     <string-array name="entries_font_size">
-        <item>Extremely Small</item>
-        <item>Extra Small</item>
-        <item>Small</item>
+        <item>Extremadamente pequeño</item>
+        <item>Extra Pequeño</item>
+        <item>Pequeño</item>
         <item>Normal</item>
-        <item>Large</item>
-        <item>Extra Large</item>
-        <item>Extremely Large</item>
+        <item>Grande</item>
+        <item>Extra Grande</item>
+        <item>Extremadamente Grande</item>
     </string-array>
 
     <string-array name="entryvalues_font_size">
@@ -53,10 +53,10 @@
     </string-array>
     
     <string-array name="entries_end_button">
-        <item>Nothing</item>
-        <item>Go to home</item>
-        <item>Go to sleep</item>
-        <item>Home, then sleep</item>
+        <item>Nada</item>
+        <item>Ir a Casa</item>
+        <item>Ir a Dormir</item>
+        <item>Casa, y dormir</item>
     </string-array>
     
     <string-array name="entryvalues_end_button">
