--- a/src/packages/apps/FileExplorer/res/values/styles.xml
+++ b/src/packages/apps/FileExplorer/res/values/styles.xml
@@ -289,10 +289,11 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">#bfbfbf</item>
-        <item name="android:textSize">12sp</item>
-        <item name="android:layout_marginTop">12dip</item>
-        <item name="android:layout_marginBottom">12dip</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">#787878</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_marginTop">30dip</item>
+        <item name="android:layout_marginBottom">16dip</item>
         <item name="android:drawablePadding">5dip</item>
     </style>
 
