--- a/src/packages/apps/MiuiHome/res/xml/default_workspace3x3.xml
+++ b/src/packages/apps/MiuiHome/res/xml/default_workspace3x3.xml
@@ -24,10 +24,15 @@
         launcher:x="0"
         launcher:y="1" />
 <folder
+        launcher:title="com.miui.home:string/default_folder_title_security"
+        launcher:screen="3"
+        launcher:x="0"
+        launcher:y="1" />
+<folder
         launcher:title="com.miui.home:string/default_folder_title_recommend"
         launcher:presets_container="true"
         launcher:screen="3"
-        launcher:x="0"
+        launcher:x="1"
         launcher:y="1" />
 <!-- 第一屏 -->
 <search
@@ -225,83 +230,126 @@
         launcher:screen="3"
         launcher:x="2"
         launcher:y="0" />
+<!-- 安全文件夹 -->
+<favorite
+        launcher:packageName="com.android.settings"
+        launcher:className="com.android.settings.VirusScanActivity"
+        launcher:container="2"
+        launcher:x="0"
+        launcher:y="0" />
+<favorite
+        launcher:packageName="com.wali.miui.networkassistant"
+        launcher:className="com.wali.miui.networkassistant.NetworkAssistantActivity"
+        launcher:container="2"
+        launcher:x="0"
+        launcher:y="0" />
+<favorite
+        launcher:packageName="com.android.settings"
+        launcher:className="com.android.settings.MiuiPasswordGuardActivity"
+        launcher:container="2"
+        launcher:x="0"
+        launcher:y="0" />
+<favorite
+        launcher:packageName="com.miui.backup"
+        launcher:className="com.miui.backup.BackupActivity"
+        launcher:container="2"
+        launcher:x="0"
+        launcher:y="0" />
+<favorite
+        launcher:packageName="com.miui.antispam"
+        launcher:className="com.miui.antispam.firewall.FirewallTab"
+        launcher:container="2"
+        launcher:x="0"
+        launcher:y="0" />
+<favorite
+        launcher:packageName="com.lbe.security.miui"
+        launcher:className="com.lbe.security.ui.MainActivity"
+        launcher:container="2"
+        launcher:x="0"
+        launcher:y="0" />
+<favorite
+        launcher:packageName="com.lbe.security.miui"
+        launcher:className="com.lbe.security.ui.AutoStartAppList"
+        launcher:container="2"
+        launcher:x="0"
+        launcher:y="0" />
 <!-- 推荐文件夹 -->
 <favorite
         launcher:packageName="com.UCMobile"
         launcher:className="com.UCMobile.main.UCMobile"
-        launcher:container="2"
+        launcher:container="3"
         launcher:x="0"
         launcher:y="0" />
 <favorite
         launcher:packageName="com.letao.activity"
         launcher:className="com.letao.activity.SplashActivity"
-        launcher:container="2"
+        launcher:container="3"
         launcher:x="0"
         launcher:y="0" />
 <favorite
         launcher:packageName="com.geili.vancl"
         launcher:className="com.geili.vancl.activity.SplashActivity"
-        launcher:container="2"
+        launcher:container="3"
         launcher:x="0"
         launcher:y="0" />
 <favorite
         launcher:packageName="com.duokan.reader"
         launcher:className="com.duokan.reader.MainActivity"
-        launcher:container="2"
+        launcher:container="3"
         launcher:x="0"
         launcher:y="0" />
 <favorite
         launcher:packageName="com.youku.phone"
         launcher:className="com.youku.phone.ActivityWelcome"
-        launcher:container="2"
+        launcher:container="3"
         launcher:x="0"
         launcher:y="0" />
 <favorite
         launcher:packageName="cn.wps.moffice"
         launcher:className="cn.wps.moffice.documentmanager.PreStartActivity"
-        launcher:container="2"
+        launcher:container="3"
         launcher:x="0"
         launcher:y="0" />
 <favorite
         launcher:packageName="cn.wps.livespace"
         launcher:className="cn.wps.livespace.TabController"
-        launcher:container="2"
+        launcher:container="3"
         launcher:x="0"
         launcher:y="0" />
 <favorite
         launcher:packageName="com.geili.koudai"
         launcher:className="com.geili.koudai.activity.SplashActivity"
-        launcher:container="2"
+        launcher:container="3"
         launcher:x="0"
         launcher:y="0" />
 <favorite
         launcher:packageName="com.duowan.mobile"
         launcher:className="com.duowan.mobile.activity.SplashActivity"
-        launcher:container="2"
+        launcher:container="3"
         launcher:x="0"
         launcher:y="0" />
 <favorite
         launcher:packageName="com.cootek.smartinputv5"
         launcher:className="com.cootek.smartinputv5.Guide"
-        launcher:container="2"
+        launcher:container="3"
         launcher:x="0"
         launcher:y="0" />
 <favorite
         launcher:packageName="com.baidu.input"
         launcher:className="com.baidu.input.ConfigActivity"
-        launcher:container="2"
+        launcher:container="3"
         launcher:x="0"
         launcher:y="0" />
 <favorite
         launcher:packageName="com.sohu.inputmethod.sogou"
         launcher:className="com.sohu.inputmethod.sogou.SogouIMELauncher"
-        launcher:container="2"
+        launcher:container="3"
         launcher:x="0"
         launcher:y="0" />
 <favorite
         launcher:packageName="com.google.android.talk"
         launcher:className="com.google.android.talk.SigningInActivity"
-        launcher:container="2"
+        launcher:container="3"
         launcher:x="0"
         launcher:y="0" />
 <!-- 结束推荐文件夹 -->
@@ -309,14 +357,14 @@
         launcher:packageName="com.sina.weibo"
         launcher:className="com.sina.weibo.SplashActivity"
         launcher:screen="3"
-        launcher:x="1"
+        launcher:x="2"
         launcher:y="1" />
 <favorite
         launcher:packageName="com.tencent.mobileqq"
         launcher:className="com.tencent.mobileqq.activity.SplashActivity"
         launcher:screen="3"
-        launcher:x="2"
-        launcher:y="1" />
+        launcher:x="0"
+        launcher:y="2" />
 <!-- 底栏 -->
 <favorite
         launcher:packageName="com.android.contacts"
