--- a/src/packages/apps/Phone/res/layout/ongoing_call_notification.xml
+++ b/src/packages/apps/Phone/res/layout/ongoing_call_notification.xml
@@ -43,6 +43,7 @@
     <ImageView android:id="@+id/icon"
         android:layout_width="@android:dimen/notification_large_icon_width"
         android:layout_height="@android:dimen/notification_large_icon_width"
+        android:layout_gravity="center"
         android:background="@miui:drawable/android_notify_panel_notification_icon_bg_tile"
         android:scaleType="center"
         />
