--- a/src/frameworks/miui/core/res/res/values/public.xml
+++ b/src/frameworks/miui/core/res/res/values/public.xml
@@ -1362,10 +1362,11 @@
   <public type="string" name="error_not_acceptable" id="0x060c01f1" />
   <public type="string" name="screen_on_proximity_sensor_hint" id="0x060c01f2" />
   <public type="string" name="screen_on_proximity_sensor_summary" id="0x060c01f3" />
-  <public type="string" name="format_time_in_12_hours" id="0x060c01f4" />
+  <public type="string" name="screen_on_proximity_sensor_title" id="0x060c01f4" />
   <public type="string" name="wake_alarm_message" id="0x060c01f5" />
   <public type="string" name="alarm_message_12_hour_formate" id="0x060c01f6" />
-  <public type="string" name="android_storage_usb" id="0x060c01f7" />
+  <public type="string" name="format_time_in_12_hours" id="0x060c01f7" />
+  <public type="string" name="android_storage_usb" id="0x060c01f8" />
 
   <public type="style" name="Widget.ListView.NoDivider" id="0x060d0000" />
   <public type="style" name="Widget.TabWidget.Secondary" id="0x060d0001" />
