--- a/src/frameworks/miui/overlay/frameworks/base/core/res/res/values/arrays.xml
+++ b/src/frameworks/miui/overlay/frameworks/base/core/res/res/values/arrays.xml
@@ -3,6 +3,6 @@
     <!-- Used in LocalePicker -->
     <string-array translatable="false" name="special_locale_names">
         <item>简体中文</item>
-        <item>繁體中文 (台灣)</item>
+        <item>繁體中文</item>
     </string-array>
 </resources>
