--- a/src/packages/apps/MiuiHome/res/values/arrays.xml
+++ b/src/packages/apps/MiuiHome/res/values/arrays.xml
@@ -19,10 +19,10 @@
         <item>home_edit_box_area_4_4</item>
     </string-array>
     <string-array name="transformation_entries">
-        <item>Class</item>
-        <item>Classic(No overshoot)</item>
+        <item>Classic</item>
+        <item>Classic (No Overshoot)</item>
         <item>Crossfade</item>
-        <item>Falldown</item>
+        <item>Tumbling</item>
         <item>Page</item>
         <item>Cascading</item>
         <item>Rotation</item>
@@ -61,7 +61,7 @@
 
     <string-array name="gadget_weather_theme_type_entries">
         <item>Default</item>
-        <item>Class</item>
+        <item>Classic</item>
     </string-array>
 
 </resources>
