--- a/src/packages/apps/XiaomiServiceFramework/res/values/styles.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="HyperLinkStyle" parent="android:style/TextAppearance.Small">
+    <style name="HyperLinkStyle" parent="android:style/TextAppearance">
         <item name="android:textColor">@color/hyperlink_text_color</item>
     </style>
     <style name="ActiveTextStyle" parent="android:style/TextAppearance.Large">
