--- a/src/packages/apps/MiuiHome/res/xml/default_workspace.xml
+++ b/src/packages/apps/MiuiHome/res/xml/default_workspace.xml
@@ -193,14 +193,14 @@
         launcher:x="3"
         launcher:y="0" />
 <favorite
-        launcher:packageName="com.baidu.BaiduMap"
-        launcher:className="com.baidu.BaiduMap.BaiduMap"
+        launcher:packageName="com.miui.weather2"
+        launcher:className="com.miui.weather2.ActivityWeatherCycle"
         launcher:screen="2"
         launcher:x="0"
         launcher:y="1" />
 <favorite
-        launcher:packageName="com.miui.weather2"
-        launcher:className="com.miui.weather2.ActivityWeatherCycle"
+        launcher:packageName="com.xiaomi.gamecenter"
+        launcher:className="com.xiaomi.gamecenter.ui.MainTabActivity"
         launcher:screen="2"
         launcher:x="1"
         launcher:y="1" />
@@ -334,8 +334,8 @@
         launcher:y="0" />
 <!-- 结束推荐文件夹 -->
 <favorite
-        launcher:packageName="com.sina.mfweibo"
-        launcher:className="com.sina.mfweibo.SplashActivity"
+        launcher:packageName="com.baidu.BaiduMap"
+        launcher:className="com.baidu.BaiduMap.BaiduMap"
         launcher:screen="2"
         launcher:x="1"
         launcher:y="2" />
@@ -344,6 +344,12 @@
         launcher:className="com.tencent.mobileqq.activity.SplashActivity"
         launcher:screen="2"
         launcher:x="2"
+        launcher:y="2" />
+<favorite
+        launcher:packageName="com.sina.weibo"
+        launcher:className="com.sina.weibo.SplashActivity"
+        launcher:screen="2"
+        launcher:x="3"
         launcher:y="2" />
 <!-- 底栏 -->
 <favorite
