--- a/src/packages/apps/MiuiHome/res/xml/default_workspace3x3.xml
+++ b/src/packages/apps/MiuiHome/res/xml/default_workspace3x3.xml
@@ -366,8 +366,8 @@
         launcher:y="0" />
 <!-- 结束推荐文件夹 -->
 <favorite
-        launcher:packageName="com.sina.mfweibo"
-        launcher:className="com.sina.mfweibo.SplashActivity"
+        launcher:packageName="com.sina.weibo"
+        launcher:className="com.sina.weibo.SplashActivity"
         launcher:screen="3"
         launcher:x="0"
         launcher:y="2" />
