--- a/src/packages/apps/XiaomiServiceFramework/res/layout/find_device_setting.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/layout/find_device_setting.xml
@@ -14,7 +14,6 @@
             android:paddingTop="6dip"
             android:paddingBottom="6dip"
             android:gravity="center"
-            android:text="@string/find_device_notice"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="?android:attr/textColorSecondary"/>
 
@@ -28,9 +27,7 @@
             android:layout_marginBottom="@dimen/button_top_margin"
             android:layout_marginLeft="13dp"
             android:layout_marginRight="13dp"
-            android:text="@string/next"
-            android:textColor="@android:color/white"
-            android:background="@drawable/btn_orange_bkg"/>
+            android:text="@string/next"/>
 
     <RelativeLayout
             android:id="@+id/panel"
