--- a/src/packages/apps/XiaomiServiceFramework/res/layout/find_device_success.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/layout/find_device_success.xml
@@ -22,10 +22,10 @@
             android:scaleType="center"
             />
     <TextView
+            android:id="@+id/info"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="@string/find_device_notice"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:textColor="?android:attr/textColorSecondary"
             android:gravity="center_horizontal"
