--- a/src/packages/apps/MiuiMusic/res/layout/album_appwidget_1x.xml
+++ b/src/packages/apps/MiuiMusic/res/layout/album_appwidget_1x.xml
@@ -37,8 +37,8 @@
          />
          <ImageView
               android:id="@+id/album"
-              android:layout_width="@dimen/widget_album_width"
-              android:layout_height="@dimen/widget_album_height"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
               android:gravity="center"
               android:layout_centerVertical="true"
               android:scaleType="fitXY"
