--- a/src/packages/apps/MiuiMusic/res/xml/music_settings.xml
+++ b/src/packages/apps/MiuiMusic/res/xml/music_settings.xml
@@ -4,7 +4,9 @@
     xmlns:miui="http://schemas.android.com/apk/res/com.miui.player"
     android:title="@string/music_settings" >
 
-    <PreferenceCategory android:title="@string/mobile_connect_settings" >
+    <PreferenceCategory
+         android:title="@string/mobile_connect_settings"
+         android:key="mobile_connect_settings" >
 
         <CheckBoxPreference
             android:defaultValue="false"
@@ -121,7 +123,9 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/other_settings" >
+    <PreferenceCategory
+        android:key="other_settings"
+        android:title="@string/other_settings" >
 
         <CheckBoxPreference
             android:defaultValue="false"
