--- a/src/packages/apps/MiuiPhone/res/layout/emergency_dialpad_miui.xml
+++ b/src/packages/apps/MiuiPhone/res/layout/emergency_dialpad_miui.xml
@@ -27,49 +27,61 @@
     <TableRow style="@style/Miui.TableRow">
         <ImageButton android:id="@+id/one" style="@style/Miui.TableColumn"
             android:background="@drawable/ecc_dial_button_bg_miui"
-            android:contentDescription="@string/description_image_button_one" />
+            android:contentDescription="@string/description_image_button_one"
+            android:soundEffectsEnabled="false" />
         <ImageButton android:id="@+id/two" style="@style/Miui.TableColumn"
             android:background="@drawable/ecc_dial_middle_button_bg_miui"
-            android:contentDescription="@string/description_image_button_two" />
+            android:contentDescription="@string/description_image_button_two"
+            android:soundEffectsEnabled="false" />
         <ImageButton android:id="@+id/three" style="@style/Miui.TableColumn"
             android:background="@drawable/ecc_dial_button_bg_miui"
-            android:contentDescription="@string/description_image_button_three" />
+            android:contentDescription="@string/description_image_button_three"
+            android:soundEffectsEnabled="false" />
     </TableRow>
 
     <TableRow style="@style/Miui.TableRow">
         <ImageButton android:id="@+id/four" style="@style/Miui.TableColumn"
             android:background="@drawable/ecc_dial_button_bg_miui"
-            android:contentDescription="@string/description_image_button_four" />
+            android:contentDescription="@string/description_image_button_four"
+            android:soundEffectsEnabled="false" />
         <ImageButton android:id="@+id/five" style="@style/Miui.TableColumn"
             android:background="@drawable/ecc_dial_middle_button_bg_miui"
-            android:contentDescription="@string/description_image_button_five" />
+            android:contentDescription="@string/description_image_button_five"
+            android:soundEffectsEnabled="false" />
         <ImageButton android:id="@+id/six" style="@style/Miui.TableColumn"
             android:background="@drawable/ecc_dial_button_bg_miui"
-            android:contentDescription="@string/description_image_button_six" />
+            android:contentDescription="@string/description_image_button_six"
+            android:soundEffectsEnabled="false" />
     </TableRow>
 
     <TableRow style="@style/Miui.TableRow">
         <ImageButton android:id="@+id/seven" style="@style/Miui.TableColumn"
             android:background="@drawable/ecc_dial_button_bg_miui"
-            android:contentDescription="@string/description_image_button_seven" />
+            android:contentDescription="@string/description_image_button_seven"
+            android:soundEffectsEnabled="false" />
         <ImageButton android:id="@+id/eight" style="@style/Miui.TableColumn"
             android:background="@drawable/ecc_dial_middle_button_bg_miui"
-            android:contentDescription="@string/description_image_button_eight" />
+            android:contentDescription="@string/description_image_button_eight"
+            android:soundEffectsEnabled="false" />
         <ImageButton android:id="@+id/nine" style="@style/Miui.TableColumn"
             android:background="@drawable/ecc_dial_button_bg_miui"
-            android:contentDescription="@string/description_image_button_nine" />
+            android:contentDescription="@string/description_image_button_nine"
+            android:soundEffectsEnabled="false" />
     </TableRow>
 
     <TableRow style="@style/Miui.TableRow">
         <ImageButton android:id="@+id/star" style="@style/Miui.TableColumn"
             android:background="@drawable/ecc_dial_button_bg_miui"
-            android:contentDescription="@string/description_image_button_star" />
+            android:contentDescription="@string/description_image_button_star"
+            android:soundEffectsEnabled="false" />
         <ImageButton android:id="@+id/zero" style="@style/Miui.TableColumn"
             android:background="@drawable/ecc_dial_middle_button_bg_miui"
-            android:contentDescription="@string/description_image_button_zero" />
+            android:contentDescription="@string/description_image_button_zero"
+            android:soundEffectsEnabled="false" />
         <ImageButton android:id="@+id/pound" style="@style/Miui.TableColumn"
             android:background="@drawable/ecc_dial_button_bg_miui"
-            android:contentDescription="@string/description_image_button_pound" />
+            android:contentDescription="@string/description_image_button_pound"
+            android:soundEffectsEnabled="false" />
     </TableRow>
 
 </TableLayout>
